--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: green;
+  background-color: #51CF3E;
   margin: 0;
   padding: 0;
 }
@@ -7,8 +7,8 @@ body {
 .sky{
   width: auto;
   height: 450px;
-  background-color: white;
-
+  background-image: url("https://raw.githubusercontent.com/Raulif/Car-game/master/sky-bg.jpg");
+  background-size: auto 100%;
 }
 
 .road{
@@ -16,13 +16,16 @@ body {
   width: 100%;
   height: 60px;
   background-color: brown;
+  border-width: 2px 0px 0px 0px;
+  border-color: black;
+  border-style: solid;
 }
 
 .textContainer{
   position: absolute;
   width: 50%;
   max-height: 50px;
-  margin-top: 3px;
+  margin-top: 2px;
   margin-left: auto;
   margin-right: auto;
   padding: 0;
@@ -41,19 +44,9 @@ body {
   vertical-align: middle;
 }
 
-/*#fuel-counter{
-  position: absolute;
-  margin-left: 10px;
-  margin-top: 50px
-  float: left;
-  font-family: 'Permanent Marker', cursive;
-  font-size: 30px;
-  border-bottom: solid 2px;
-}*/
-
 #car-icon{
-  height: 150px;
-  margin-top: 340px;
+  height: 100px;
+  margin-top: 368px;
   margin-left: 10px;
   margin-right: 10px;
   left: auto;
@@ -74,7 +67,7 @@ body {
 
 .btn-field{
   clear: both;
-  position: relative;
+  position: absolute;
   margin-top: 10px;
   text-align: center;
   width: 100%;
@@ -89,6 +82,36 @@ body {
   font-family: 'Permanent Marker', cursive;
   font-size: 30px;
   background-color: #C1C7C2;
+}
+
+#fuel-cont{
+  height: 150px;
+  display: inline-block;
+  width: 50px;
+  position: absolute;
+  float: right;
+  right: 200px;
+}
+
+#fuel-level{
+  position: absolute;
+  height: 10px;
+  width: 50px;
+  vertical-align: middle;
+  border-radius: 5%;
+  border-style: solid;
+  border-width: thin;
+  background-color: #424242;
+  bottom: 0;
+}
+
+#fuel-label{
+  position: absolute;
+  float: right;
+  right: 200px;
+  font-family: 'Quicksand', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
 
 }
 
